--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,23 @@
     <string name="contentDescriptionMovieImage">Movie imagen</string>
     <string name="tvMovieName">Name</string>
     <string name="tvDateMovie">Date</string>
+    <string name="title_activity_show_movie">ScrollingActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="category">Category</string>
+    <string name="tenet_categoria">Tenet Category</string>
+    <string name="premiere">Premiere date</string>
+    <string name="tenet_estreno">Tenet premiere date</string>
+    <string name="tenet_premiere">Tener premiere date</string>
+    <string name="duration">Duration</string>
+    <string name="tenet_duracion">Tenet duration</string>
+    <string name="desc_cover">Cover description</string>
+    <string name="content">Content</string>
+    <string name="tenet_argument">Tenet argument</string>
+    <string name="background_image_desc">Background image description</string>
+    <string name="newMovie">Add new movie</string>
+    <string name="select_a_category">You must select a category</string>
+    <string name="share_menu_item">Share menu item</string>
+    <string name="no_connection">You don\'t have active connection</string>
+    <string name="subject_share">Share:</string>
+    <string name="title">Título</string>
 </resources>
